# LightSong

./: .gitignore  CMakeLists.txt  architecture.md  main.cpp  note.md  sdl2-config.cmake  sdlInit.cpp  struct.md  test.cpp  utils.cpp  utils.h
compose/: Sound.cpp  Sound.h
core/: Command.cpp  Command.h  Director.cpp  Director.h  EnginePath.h  Environment.cpp  Environment.h  GameConfig.cpp  GameConfig.h  Parser.cpp  Parser.h
platform/cli/: CliCommand.cpp  CliCommand.h  Interface.cpp  Interface.h
platform/sdl/: Interface.cpp  Interface.h  SdlCommand.cpp  SdlCommand.h  sdlUtils.cpp  sdlUtils.h
platform/sdl/compose/: Character.cpp  Character.h  Composer.cpp  Composer.h  Dialogue.cpp  Dialogue.h
platform/sdl/compose/ui/: BlankUI.cpp  BlankUI.h  LabelSetUI.cpp  LabelSetUI.h  SelectionUI.cpp  SelectionUI.h  UI.cpp  UI.h  UiEvent.cpp  UiEvent.h
platform/sdl/compose/ui/uiEventHandler/: SaveAndLoadUiEventHandler.cpp  SaveAndLoadUiEventHandler.h  SelectionUiEventHandler.cpp  SelectionUiEventHandler.h  UiEventHandler.cpp  UiEventHandler.h
